# agentbridge

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  LICENSE  README.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
.opencode/commands/: spectra-apply.md  spectra-archive.md  spectra-ask.md  spectra-audit.md  spectra-commit.md  spectra-debug.md  spectra-discuss.md  spectra-ingest.md  spectra-propose.md
design/: dashboard.md  deploy-agent.md
desktop/: design-system.html
desktop/src/: App.vue  commit-log.test.ts  commit-log.ts  dashboard-inspector.test.ts  design-system-route.test.ts  env.d.ts  main.ts  route.test.ts  route.ts  store.test.ts  store.ts  styles.css  tokens.css
examples/: agenthub.workflow.yml  tw-example.issues.json
scripts/: generate-agenthub-icon.swift
src/: cli.ts  index.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/agenthub/: agentDeploy.ts  (+11 more)
test/: agentBridge.test.ts  agenthubAgentDeploy.test.ts  agenthubCli.e2e.test.ts  agenthubGithubProjectSync.test.ts  agenthubIssueBindings.test.ts  agenthubLayout.test.ts  agenthubProjectService.test.ts  agenthubProjectWorkflow.test.ts  agenthubTuiCli.test.ts  agenthubWorkflowConfig.test.ts  cliResolution.test.ts  codexAppServer.test.ts  codexRealE2e.test.ts  config.test.ts  discordGatewayAdapter.test.ts  geminiCliAdapter.test.ts  sessionAttach.test.ts  sessionNew.test.ts  sessionOpen.test.ts  sessionPermissions.test.ts  sessionSummary.test.ts  sqliteStateStore.test.ts
(+128 files in other folders)
