[package]
name = "agenthub-desktop"
version = "0.1.0"
description = "AgentHub local worktree dashboard"
authors = ["AgentBridge contributors"]
license = "MIT"
repository = "https://github.com/unknowntpo/agentbridge"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "agenthub_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
